@@ -1,3 +1,9 @@
+2004-04-01  Richard Henderson  <rth@redhat.com>
+
+        PR c++/14804
+        * decl.c (cp_finish_decl): Preserve TREE_READONLY more often.
+        * typeck2.c (split_nonconstant_init): Clear TREE_READONLY.
+
 2004-04-01  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/14810
